Updated configs to use a semicolon as arrays value delimiter Fixed relative database path in env variables

--- a/.wiki/01.project-structure.md
+++ b/.wiki/01.project-structure.md
@@ -22,5 +22,6 @@ the overall server architecture:
 
 ### A note about startup times.
 
-**Kcrud** server startup time can be optimized by disabling unnecessary features. Turn off documentation generation.
+**Kcrud** server startup time can be optimized by disabling unnecessary features.
+[Turn off](../kcrud-base/src/main/resources/config/config_api_schema.conf) documentation API schema generation.
 Conduct database migrations in a controlled setting, not in production. Manage these settings via `hconf` configuration files.
