Updated docs links

--- a/.wiki/04.fat-jar.md
+++ b/.wiki/04.fat-jar.md
@@ -1,6 +1,6 @@
 ## Building and Executing a Fat JAR
 
-The [Ktor Gradle plugin](https://ktor.io/docs/fatjar.html#build) allows to create and run an executable JAR that includes all code dependencies (fat JAR).
+The [Ktor Gradle plugin](https://ktor.io/docs/server-fatjar.html#build) allows to create and run an executable JAR that includes all code dependencies (fat JAR).
 
 * **Building the fat JAR:** Employ the `buildFatJar` Gradle task provided by Ktor.
 
