--- a/.wiki/02.domain-component-design.md
+++ b/.wiki/02.domain-component-design.md
@@ -3,7 +3,7 @@
 [Kcrud](https://github.com/perracodex/Kcrud) components follow a structured approach to ensure clean separation of concerns.
 The architecture is divided into several layers, each with a specific role, promoting maintainability and scalability:
 
-[Routing Layer](../kcrud-employee/src/main/kotlin/kcrud/domain/employee/routing): This is the entry point for all incoming requests. [Routes](https://ktor.io/docs/routing-in-ktor.html) define the endpoints available
+[Routing Layer](../kcrud-employee/src/main/kotlin/kcrud/domain/employee/routing): This is the entry point for all incoming requests. [Routes](https://ktor.io/docs/server-routing.html) define the endpoints available
 in the Kcrud server, directing requests to the appropriate Service Layer based on the request path and method.
 
 [Service Layer](../kcrud-employee/src/main/kotlin/kcrud/domain/employee/service): Services act as the intermediary between the route handlers and the repository layer.
@@ -16,7 +16,7 @@ It abstracts the data access, providing a collection of methods for retrieving a
 
 ### A note about concurrency
 
-The `Ktor` framework is designed to enable asynchronous operations within its [routing](https://ktor.io/docs/routing-in-ktor.html) system by leveraging Kotlin's `suspend` functions.
+The `Ktor` framework is designed to enable asynchronous operations within its [routing](https://ktor.io/docs/server-routing.html) system by leveraging Kotlin's `suspend` functions.
 This facilitates efficient, non-blocking I/O, optimizing resource use and enhancing concurrent handling of numerous requests
 simultaneously without requiring extensive resources.
 
