Improved scheduler dashboard

--- a/.wiki/06.pagination.md
+++ b/.wiki/06.pagination.md
@@ -51,7 +51,7 @@ When filtering, all fields are optional. The supplied fields will construct an `
 }
 ```
 
-- Pagination and sorting are also supported:
+- Example of combining pagination and sorting:
 
 ```json
 {
