--- a/.wiki/06.pagination.md
+++ b/.wiki/06.pagination.md
@@ -31,6 +31,7 @@ Some more examples:
 ### Filtering
 
 When filtering, all fields are optional. The supplied fields will construct an `AND` filter.
+For pagination and sorting, the same endpoint syntax as above can be used.
 
 * `POST` http://localhost:8080/v1/employees/search
 
@@ -48,36 +49,5 @@ When filtering, all fields are optional. The supplied fields will construct an `
     "SINGLE",
     "DIVORCED"
   ]
-}
-```
-
-- Example of combining pagination and sorting:
-
-```json
-{
-  "firstName": "AnyName",
-  "lastName": "AnySurname",
-  "honorific": [
-    "MR",
-    "MISS"
-  ],
-  "maritalStatus": [
-    "SINGLE",
-    "DIVORCED"
-  ],
-  "pageable": {
-    "page": 0,
-    "size": 0,
-    "sort": [
-      {
-        "field": "firstName",
-        "direction": "ASC"
-      },
-      {
-        "field": "lastName",
-        "direction": "DESC"
-      }
-    ]
-  }
 }
 ```
