--- a/.wiki/01.project-structure.md
+++ b/.wiki/01.project-structure.md
@@ -18,7 +18,7 @@ the overall server architecture:
 5. [kcrud-employment](../kcrud-employment) manages employment related data and logic, relying on ```kcrud-employee``` for accessing specific employee
    details, ```kcrud-base``` for shared services, and ```kcrud-access``` for security and access control.
 
-<img src=".screenshots/server.jpg" width="800" alt="server">
+<img src="./screenshots/server.jpg" width="800" alt="server">
 
 ### A note about startup times.
 
