--- a/.wiki/02.domain-component-design.md
+++ b/.wiki/02.domain-component-design.md
@@ -12,7 +12,7 @@ This layer contains business logic and rules, request validation, and orchestrat
 [Repository Layer](../kcrud-employee/src/main/kotlin/kcrud/domain/employee/repository): At the core of data management, the repository layer interacts with the database.
 It abstracts the data access, providing a collection of methods for retrieving and storing data.
 
-<img src=".screenshots/domain.jpg" width="1280" alt="domain">
+<img src="./screenshots/domain.jpg" width="1280" alt="domain">
 
 ### A note about concurrency
 
