--- a/.wiki/05.rbac.md
+++ b/.wiki/05.rbac.md
@@ -3,7 +3,7 @@
 The project also includes an [RBAC](../kcrud-access/src/main/kotlin/kcrud/access/rbac) implementation, including a basic role [admin panel](../kcrud-access/src/main/kotlin/kcrud/access/rbac/view) build with HTML DSL.
 [Sample actors](../kcrud-access/src/main/kotlin/kcrud/access/actor/service/DefaultActorFactory.kt) and roles are created at runtime.
 
-![RBAC Admin](.screenshots/rbac_admin.jpg)
+![RBAC Admin](screenshots/rbac_admin.jpg)
 
 ### RBAC technical implementation
 
@@ -54,11 +54,11 @@ to provide a flexible and secure mechanism for controlling access to different p
 
 ### RBAC Route Setup:
 
-![RBAC Route setup](.screenshots/rbac_setup.jpg)
+![RBAC Route setup](./screenshots/rbac_setup.jpg)
 
 ### RBAC Request Execution:
 
-![RBAC Request Execution](.screenshots/rbac_request.jpg)
+![RBAC Request Execution](./screenshots/rbac_request.jpg)
 
 ### A note about field level access control:
 
