--- a/.wiki/07.demo.md
+++ b/.wiki/07.demo.md
@@ -5,4 +5,4 @@ or should be used as a reference. It is just a simple example to illustrate the 
 
 Endpoint: http://localhost:8080/demo?page=0&size=24
 
-<img src=".screenshots/demo.gif" width="1226" alt="demo">
+<img src="./screenshots/demo.gif" width="1226" alt="demo">
