--- a/.wiki/10.micrometer-metrics.md
+++ b/.wiki/10.micrometer-metrics.md
@@ -25,7 +25,7 @@ Here's how to set up [Prometheus](https://prometheus.io/) and [Grafana](https://
 
 Prometheus is now ready. Perform a few Kcrud requests, for example using the infinite scroll endpoint example. You should get something like this:
 
-<img src="./.screenshots/prometheus.jpg" width="800" alt="Prometheus">
+<img src="./screenshots/prometheus.jpg" width="800" alt="Prometheus">
 
 #### Setting Up Grafana
 
@@ -41,8 +41,8 @@ Prometheus is now ready. Perform a few Kcrud requests, for example using the inf
 
 Grafana is now ready. You should get something like this:
 
-<img src=".screenshots/grafana_4701.jpg" width="800" alt="Grafana 4701">
+<img src="./screenshots/grafana_4701.jpg" width="800" alt="Grafana 4701">
 
 You can create your own dashboards and add any desired metrics, for example `ktor_http_server_requests_seconds` to monitor request latency.
 
-<img src=".screenshots/grafana_custom.jpg" width="800" alt="Grafana Custom">
+<img src="./screenshots/grafana_custom.jpg" width="800" alt="Grafana Custom">
