Refactored RBAC dashboard for improved clarity

--- a/.wiki/05.rbac.md
+++ b/.wiki/05.rbac.md
@@ -1,9 +1,9 @@
 ## RBAC (Role Based Access Control)
 
-The project also includes an [RBAC](../kcrud-access/src/main/kotlin/kcrud/access/rbac) implementation, including a basic role [admin panel](../kcrud-access/src/main/kotlin/kcrud/access/rbac/view) build with HTML DSL.
+The project also includes an [RBAC](../kcrud-access/src/main/kotlin/kcrud/access/rbac) implementation, including a basic role [dashboard](../kcrud-access/src/main/kotlin/kcrud/access/rbac/view) build with HTML DSL.
 [Sample actors](../kcrud-access/src/main/kotlin/kcrud/access/actor/service/DefaultActorFactory.kt) and roles are created at runtime.
 
-![RBAC Admin](screenshots/rbac_admin.jpg)
+![RBAC Dashboard](screenshots/rbac_dashboard.jpg)
 
 ### RBAC technical implementation
 
