--- a/.wiki/01.project-structure.md
+++ b/.wiki/01.project-structure.md
@@ -10,7 +10,7 @@ the overall server architecture:
    connection facilities. Designed to support operational needs of domain-specific components, promoting code reuse to shared concerns.
 
 3. [kcrud-access](../kcrud-access) provides security and access control services, including authentication, authorization,
-   and user management. It leverages the ```kcrud-base``` for shared functionalities.
+   and actors management. It leverages the ```kcrud-base``` for shared functionalities.
 
 4. [kcrud-employee](../kcrud-employee) is a specialized domain component dedicated to managing employee records, encompassing all CRUD operations.
    It leverages the ```kcrud-base``` component for shared functionalities, and ```kcrud-access``` for security and access control.
