--- a/.wiki/05.rbac.md
+++ b/.wiki/05.rbac.md
@@ -63,7 +63,7 @@ to provide a flexible and secure mechanism for controlling access to different p
 ### A note about field level access control:
 
 Field Level access control is partially implemented. Each RBAC scope rule has a [fieldRules](../kcrud-access/src/main/kotlin/kcrud/access/rbac/entity/field) map that
-can be used to define which fields must be managed, for example, should be anonymized. For such, the target entity
-must inherit from [BaseRbacEntity](../kcrud-access/src/main/kotlin/kcrud/access/rbac/entity/base/BaseRbacEntity.kt), and call the anonymize function accordingly based on the defined field rules,
-for example, before returning the entity to a client.
+can be used to define which fields must be managed, for example, should be anonymized. For such, the target class
+must inherit from [BaseRbacDto](../kcrud-access/src/main/kotlin/kcrud/access/rbac/entity/base/BaseRbacDto.kt), and call the anonymize function accordingly based on the defined field rules,
+for example, before returning the instance to a client.
 
