--- a/.wiki/05.rbac.md
+++ b/.wiki/05.rbac.md
@@ -64,6 +64,6 @@ to provide a flexible and secure mechanism for controlling access to different p
 
 Field Level access control is partially implemented. Each RBAC scope rule has a [fieldRules](../kcrud-access/src/main/kotlin/kcrud/access/rbac/model/field) map that
 can be used to define which fields must be managed, for example, should be anonymized. For such, the target class
-must inherit from [BaseRbacDto](../kcrud-access/src/main/kotlin/kcrud/access/rbac/model/base/BaseRbacDto.kt), and call the anonymize function accordingly based on the defined field rules,
+must inherit from [BaseRbac](../kcrud-access/src/main/kotlin/kcrud/access/rbac/model/base/BaseRbac.kt), and call the anonymize function accordingly based on the defined field rules,
 for example, before returning the instance to a client.
 
