--- a/.wiki/06.pagination.md
+++ b/.wiki/06.pagination.md
@@ -18,11 +18,11 @@ Some more examples:
 
 * Page 0, 10 elements per page, sorted by first name ascending:
 
-`GET` http://localhost:8080/v1/employees?page=0&size=10&?sort=firstName,asc
+`GET` http://localhost:8080/v1/employees?page=0&size=10&sort=firstName,asc
 
 * Page 0, 10 elements per page, sorted by first name ascending and marital status descending:
 
-`GET` http://localhost:8080/v1/employees?page=0&size=10&?sort=firstName,asc&sort=maritalStatus,desc
+`GET` http://localhost:8080/v1/employees?page=0&size=10&sort=firstName,asc&sort=maritalStatus,desc
 
 * No pagination, sorted by first name, default to ascending:
 
