--- a/.wiki/06.pagination.md
+++ b/.wiki/06.pagination.md
@@ -1,6 +1,6 @@
 ### Pagination and Sorting
 
-For more detailed information refer to the [Exposed Pagination Library](https://github.com/perracodex/exposed-pagination).
+_For more detailed information refer to the [Exposed Pagination Library](https://github.com/perracodex/exposed-pagination)._
 
 Pagination allows optionally to combine multiple sorting fields with corresponding directions.
 If a sort field does not have a direction, it will default to `ASC`.
