Added wildcard search endpoint for employees

--- a/.wiki/06.pagination.md
+++ b/.wiki/06.pagination.md
@@ -53,3 +53,10 @@ For pagination and sorting, the same endpoint syntax as above can be used.
   ]
 }
 ```
+
+### Searching
+
+Searching will perform a partial match in a set of predefined fields. The query parameter is case-insensitive.
+The server is set to search in first name, last name, work email and contact email.
+
+* `GET` http://localhost:8080/v1/employees/search?query=AnyName
