--- a/.wiki/08.rest.md
+++ b/.wiki/08.rest.md
@@ -2,12 +2,12 @@
 
 #### Employee & Contact
 
-* `POST` http://localhost:8080/v1/employees
-* `PUT` http://localhost:8080/v1/employees/{employee_id}
-* `GET` http://localhost:8080/v1/employees/{employee_id}
-* `DELETE` http://localhost:8080/v1/employees/{employee_id}
-* Get all: `GET` http://localhost:8080/v1/employees
-* Delete all: `DELETE` http://localhost:8080/v1/employees
+* `POST` http://localhost:8080/api/v1/employees
+* `PUT` http://localhost:8080/api/v1/employees/{employee_id}
+* `GET` http://localhost:8080/api/v1/employees/{employee_id}
+* `DELETE` http://localhost:8080/api/v1/employees/{employee_id}
+* Get all: `GET` http://localhost:8080/api/v1/employees
+* Delete all: `DELETE` http://localhost:8080/api/v1/employees
 
 `json`
 
@@ -25,11 +25,11 @@
 
 #### Employment & Period
 
-* `POST` http://localhost:8080/v1/employees/{employee_id}/employments
-* `PUT` http://localhost:8080/v1/employees/{employee_id}/employments/{employment_id}
-* `GET` http://localhost:8080/v1/employees/{employee_id}/employments/{employment_id}
-* `DELETE` http://localhost:8080/v1/employees/{employee_id}/employments/{employment_id}
-* Get all: `GET` http://localhost:8080/v1/employees/{employee_id}/employments/
+* `POST` http://localhost:8080/api/v1/employees/{employee_id}/employments
+* `PUT` http://localhost:8080/api/v1/employees/{employee_id}/employments/{employment_id}
+* `GET` http://localhost:8080/api/v1/employees/{employee_id}/employments/{employment_id}
+* `DELETE` http://localhost:8080/api/v1/employees/{employee_id}/employments/{employment_id}
+* Get all: `GET` http://localhost:8080/api/v1/employees/{employee_id}/employments/
 
 `json`
 
