--- a/.wiki/01.project-structure.md
+++ b/.wiki/01.project-structure.md
@@ -3,24 +3,24 @@
 **Kcrud** is organized into a multi-project setup, where each component (_subproject_) serves a distinct role within
 the overall server architecture:
 
-1. [kcrud-server](../kcrud-server) is the primary project component, responsible for server initialization, and integration of all server components.
+1. [server](../kcrud-server) is the primary project component, responsible for server initialization, and integration of all server components.
    It manages the server's lifecycle from startup to shut-down and serves as the backbone of the application's operations.
 
-2. [kcrud-core](../kcrud-system/core) provides shared infrastructure and services, such as utility functions, and server configurations
+2. [core](../kcrud-system/core) provides shared infrastructure and services, such as utility functions, and server configurations
    Designed to support operational needs of domain-specific components, promoting code reuse to shared concerns.
 
-3. [kcrud-database](../kcrud-system/core) provides the database connection and management services, including database migrations and schema.
+3. [database](../kcrud-system/core) provides the database connection and management services, including database migrations and schema.
    This module **is not** responsible for domain-specific database operations but provides the necessary infrastructure to support them.
 
-4. [kcrud-access](../kcrud-system/access) provides security and access control services, including authentication, authorization,
-   and actors management. It leverages the `kcrud-core` and `kcrud-database` for shared functionalities.
+4. [access](../kcrud-system/access) provides security and access control services, including authentication, authorization,
+   and actors management. It leverages the `core` and `database` for shared functionalities.
 
-5. [kcrud-domain-employee](../kcrud-domain/employee) is a specialized domain component dedicated to managing employee records, encompassing all CRUD operations.
-   It leverages the `kcrud-core` and `kcrud-database` for shared functionalities, and `kcrud-access` for security and access control.
+5. [employee](../kcrud-domain/employee) is a specialized domain component dedicated to managing employee records, encompassing all CRUD operations.
+   It leverages the `core` and `database` for shared functionalities, and `access` for security and access control.
 
-6. [kcrud-domain-employment](../kcrud-domain/employment) manages employment related data and logic, relying on
-   `kcrud-employee` for accessing specific employee
-   details, `kcrud-core` and `kcrud-database` for shared functionalities, and `kcrud-access` for security and access control.
+6. [employment](../kcrud-domain/employment) manages employment related data and logic, relying on
+   `employee` for accessing specific employee
+   details, `core` and `database` for shared functionalities, and `access` for security and access control.
 
 <img src="./screenshots/server.jpg" width="800" alt="server">
 
